jilles      2006/01/19 14:35:04 UTC	(20060119-4575)
  Log:
  Um, P10 JOIN introduces the new user unopped...
  

  Changes:	Modified:
  +1 -6		trunk/protocol/asuka.c (File Modified) 
  +1 -6		trunk/protocol/bircd.c (File Modified) 
  +1 -6		trunk/protocol/undernet.c (File Modified) 


jilles      2006/01/19 13:44:42 UTC	(20060119-4573)
  Log:
  Change myuser_delete to take a myuser_t * instead
  of a name.
  

  Changes:	Modified:
  +1 -1		trunk/include/extern.h (File Modified) 
  +1 -1		trunk/modules/nickserv/drop.c (File Modified) 
  +1 -1		trunk/modules/nickserv/register.c (File Modified) 
  +1 -1		trunk/modules/userserv/drop.c (File Modified) 
  +1 -1		trunk/modules/userserv/register.c (File Modified) 
  +1 -1		trunk/modules/xmlrpc/account.c (File Modified) 
  +4 -4		trunk/src/node.c (File Modified) 


jilles      2006/01/19 13:37:54 UTC	(20060119-4571)
  Log:
  Change user_delete to take a user_t * instead of a nick.
  

  Changes:	Modified:
  +1 -1		trunk/include/extern.h (File Modified) 
  +1 -1		trunk/modules/nickserv/ghost.c (File Modified) 
  +2 -2		trunk/modules/operserv/noop.c (File Modified) 
  +1 -1		trunk/protocol/asuka.c (File Modified) 
  +1 -1		trunk/protocol/bahamut.c (File Modified) 
  +1 -1		trunk/protocol/bircd.c (File Modified) 
  +1 -1		trunk/protocol/charybdis.c (File Modified) 
  +1 -1		trunk/protocol/dreamforge.c (File Modified) 
  +1 -1		trunk/protocol/hyperion.c (File Modified) 
  +1 -1		trunk/protocol/inspircd.c (File Modified) 
  +1 -1		trunk/protocol/ircnet.c (File Modified) 
  +1 -1		trunk/protocol/monkey.c (File Modified) 
  +1 -1		trunk/protocol/plexus.c (File Modified) 
  +1 -1		trunk/protocol/ptlink.c (File Modified) 
  +1 -1		trunk/protocol/ratbox.c (File Modified) 
  +1 -1		trunk/protocol/shadowircd.c (File Modified) 
  +1 -1		trunk/protocol/solidircd.c (File Modified) 
  +1 -1		trunk/protocol/sorcery.c (File Modified) 
  +1 -1		trunk/protocol/ultimate3.c (File Modified) 
  +1 -1		trunk/protocol/undernet.c (File Modified) 