@@ -6,13 +6,13 @@
  * Derived mainly from the documentation (or lack thereof)
  * in my protocol bridge.
  *
- * $Id: undernet.c 4575 2006-01-19 14:35:04Z jilles $
+ * $Id: undernet.c 4579 2006-01-19 14:58:34Z jilles $
  */
 
 #include "atheme.h"
 #include "protocol/undernet.h"
 
-DECLARE_MODULE_V1("protocol/undernet", TRUE, _modinit, NULL, "$Id: undernet.c 4575 2006-01-19 14:35:04Z jilles $", "Atheme Development Group <http://www.atheme.org>");
+DECLARE_MODULE_V1("protocol/undernet", TRUE, _modinit, NULL, "$Id: undernet.c 4579 2006-01-19 14:58:34Z jilles $", "Atheme Development Group <http://www.atheme.org>");
 
 /* *INDENT-OFF* */
 
@@ -145,8 +145,8 @@ static void undernet_join_sts(channel_t *c, user_t *u, boolean_t isnew, char *mo
 static void undernet_kick(char *from, char *channel, char *to, char *reason)
 {
 	channel_t *chan = channel_find(channel);
-	user_t *fptr = user_find(from);
-	user_t *user = user_find(to);
+	user_t *fptr = user_find_named(from);
+	user_t *user = user_find_named(to);
 
 	if (!chan || !user || !fptr)
 		return;
@@ -160,7 +160,7 @@ static void undernet_kick(char *from, char *channel, char *to, char *reason)
 static void undernet_msg(char *from, char *target, char *fmt, ...)
 {
 	va_list ap;
-	user_t *u = user_find(from);
+	user_t *u = user_find_named(from);
 	char buf[BUFSIZE];
 
 	if (!u)
@@ -178,8 +178,8 @@ static void undernet_notice(char *from, char *target, char *fmt, ...)
 {
 	va_list ap;
 	char buf[BUFSIZE];
-	user_t *u = user_find(from);
-	user_t *t = user_find(target);
+	user_t *u = user_find_named(from);
+	user_t *t = user_find_named(target);
 
 	if (u == NULL && (from == NULL || (irccasecmp(from, me.name) && irccasecmp(from, ME))))
 	{
@@ -206,8 +206,8 @@ static void undernet_numeric_sts(char *from, int numeric, char *target, char *fm
 	char buf[BUFSIZE];
 	user_t *source_p, *target_p;
 
-	source_p = user_find(from);
-	target_p = user_find(target);
+	source_p = user_find_named(from);
+	target_p = user_find_named(target);
 
 	if (!target_p)
 		return;
@@ -224,23 +224,23 @@ static void undernet_skill(char *from, char *nick, char *fmt, ...)
 {
 	va_list ap;
 	char buf[BUFSIZE];
-	user_t *fptr = user_find(from);
-	user_t *tptr = user_find(nick);
+	user_t *fptr = user_find_named(from);
+	user_t *tptr = user_find_named(nick);
 
-	if (!fptr || !tptr)
+	if (!tptr)
 		return;
 
 	va_start(ap, fmt);
 	vsnprintf(buf, BUFSIZE, fmt, ap);
 	va_end(ap);
 
-	sts("%s D %s :%s!%s!%s (%s)", fptr->uid, tptr->uid, from, from, from, buf);
+	sts("%s D %s :%s!%s!%s (%s)", fptr ? fptr->uid : me.numeric, tptr->uid, from, from, from, buf);
 }
 
 /* PART wrapper */
 static void undernet_part(char *chan, char *nick)
 {
-	user_t *u = user_find(nick);
+	user_t *u = user_find_named(nick);
 	channel_t *c = channel_find(chan);
 	chanuser_t *cu;
 
@@ -282,7 +282,7 @@ static void undernet_topic_sts(char *channel, char *setter, time_t ts, char *top
 /* mode wrapper */
 static void undernet_mode_sts(char *sender, char *target, char *modes)
 {
-	user_t *fptr = user_find(sender);
+	user_t *fptr = user_find_named(sender);
 	channel_t *cptr = channel_find(target);
 
 	if (!fptr || !cptr)
